@@ -65,6 +65,7 @@ import android.text.style.StrikethroughSpan;
 import android.util.Log;
 import android.widget.EditText;
 import cgeo.geocaching.activity.ActivityMixin;
+import cgeo.geocaching.files.LocParser;
 
 public class cgBase {
 
@@ -92,7 +93,7 @@ public class cgBase {
 	private final static Pattern patternDesc = Pattern.compile("<span id=\"ctl00_ContentBody_LongDescription\"[^>]*>" + "(.*)</span>[^<]*</div>[^<]*<p>[^<]*</p>[^<]*<p>[^<]*<strong>\\W*Additional Hints</strong>", Pattern.CASE_INSENSITIVE);
 	private final static Pattern patternCountLogs = Pattern.compile("<span id=\"ctl00_ContentBody_lblFindCounts\"><p>(.*)<\\/p><\\/span>", Pattern.CASE_INSENSITIVE);
 	private final static Pattern patternCountLog = Pattern.compile(" src=\"\\/images\\/icons\\/([^\\.]*).gif\" alt=\"[^\"]*\" title=\"[^\"]*\" />([0-9]*)[^0-9]+", Pattern.CASE_INSENSITIVE | Pattern.MULTILINE);
-	private final static Pattern patternLogs = Pattern.compile("<table class=\"LogsTable\">(.*?)</table>\\s*<p", Pattern.CASE_INSENSITIVE | Pattern.MULTILINE);
+	//private final static Pattern patternLogs = Pattern.compile("<table class=\"LogsTable\">(.*?)</table>\\s*<p", Pattern.CASE_INSENSITIVE | Pattern.MULTILINE);
 	private final static Pattern patternLog = Pattern.compile("<tr><td class.+?<a href=\"/profile/\\?guid=.+?>(.+?)</a>.+?logOwnerStats.+?guid.+?>(\\d+)</a>.+?LogType.+?<img.+?/images/icons/([^\\.]+)\\..+?title=\"(.+?)\".+?LogDate.+?>(.+?)<.+?LogText.+?>(.*?)</p>(.*?)</div></div></div></td></tr>", Pattern.CASE_INSENSITIVE | Pattern.MULTILINE);
 	private final static Pattern patternLogImgs = Pattern.compile("href=\"(http://img.geocaching.com/cache/log/.+?)\".+?<span>([^<]*)", Pattern.CASE_INSENSITIVE);
 	private final static Pattern patternAttributes = Pattern.compile("<h3 class=\"WidgetHeader\">[^<]*<img[^>]+>\\W*Attributes[^<]*</h3>[^<]*<div class=\"WidgetBody\">(([^<]*<img src=\"[^\"]+\" alt=\"[^\"]+\"[^>]*>)+)[^<]*<p", Pattern.CASE_INSENSITIVE);
@@ -115,13 +116,15 @@ public class cgBase {
 	public static HashMap<Integer, String> logTypesTrackable = new HashMap<Integer, String>();
 	public static HashMap<Integer, String> logTypesTrackableAction = new HashMap<Integer, String>();
 	public static HashMap<Integer, String> errorRetrieve = new HashMap<Integer, String>();
-	public static SimpleDateFormat dateInBackslash = new SimpleDateFormat("MM/dd/yyyy");
-	public static SimpleDateFormat dateInDash = new SimpleDateFormat("yyyy-MM-dd");
-	public static SimpleDateFormat dateEvIn = new SimpleDateFormat("dd MMMMM yyyy", Locale.ENGLISH); // 28 March 2009
-	public static SimpleDateFormat dateTbIn1 = new SimpleDateFormat("EEEEE, dd MMMMM yyyy", Locale.ENGLISH); // Saturday, 28 March 2009
-	public static SimpleDateFormat dateTbIn2 = new SimpleDateFormat("EEEEE, MMMMM dd, yyyy", Locale.ENGLISH); // Saturday, March 28, 2009
-	public static SimpleDateFormat dateSqlIn = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss"); // 2010-07-25 14:44:01
-	public static SimpleDateFormat dateGPXIn = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'"); // 2010-04-20T07:00:00Z
+	public final static SimpleDateFormat dateInBackslash = new SimpleDateFormat("MM/dd/yyyy");
+	public final static SimpleDateFormat dateInDash = new SimpleDateFormat("yyyy-MM-dd");
+	public final static SimpleDateFormat dateEvIn = new SimpleDateFormat("dd MMMMM yyyy", Locale.ENGLISH); // 28 March 2009
+	public final static SimpleDateFormat dateTbIn1 = new SimpleDateFormat("EEEEE, dd MMMMM yyyy", Locale.ENGLISH); // Saturday, 28 March 2009
+	public final static SimpleDateFormat dateTbIn2 = new SimpleDateFormat("EEEEE, MMMMM dd, yyyy", Locale.ENGLISH); // Saturday, March 28, 2009
+	public final static SimpleDateFormat dateSqlIn = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss"); // 2010-07-25 14:44:01
+	public final static SimpleDateFormat dateGPXIn = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'"); // 2010-04-20T07:00:00Z
+	public final static SimpleDateFormat dateLogs1 = new SimpleDateFormat("MMMMM dd, yyyy", Locale.ENGLISH);  // March 28, 2009
+	public final static SimpleDateFormat dateLogs2 = new SimpleDateFormat("MMMMM dd", Locale.ENGLISH);  // March 28
 	private Resources res = null;
 	private HashMap<String, String> cookies = new HashMap<String, String>();
 	private static final String passMatch = "[/\\?&]*[Pp]ass(word)?=[^&^#^$]+";
@@ -867,7 +870,7 @@ public class cgBase {
 			while (matcherTotalCnt.find()) {
 				if (matcherTotalCnt.groupCount() > 0) {
 					if (matcherTotalCnt.group(1) != null) {
-						caches.totalCnt = new Integer(matcherTotalCnt.group(1));
+						caches.totalCnt = Integer.valueOf(matcherTotalCnt.group(1));
 					}
 				}
 			}
@@ -1590,7 +1593,7 @@ public class cgBase {
 		        2- Finds-count
                 3- Log type image name (e.g. "icon_smile")
                 4- Type string (e.g. "Found it")
-                5- Date string (e.g. "about 4 days ago")
+                5- Date string (e.g. "March 28, 2009")
                 6- Log text
                 7- The rest (e.g. log-images, maybe faster)
 		        */
@@ -1607,6 +1610,28 @@ public class cgBase {
 					else
 					{
 						logDone.type = logTypes.get("icon_note");
+					}
+					
+					try
+					{
+					    logDone.date = dateLogs1.parse(matcherLog.group(5)).getTime(); // long format
+					}
+					catch (ParseException e)
+					{
+					    try
+					    {
+					        // short format, with current year
+					        final Date date    = dateLogs2.parse(matcherLog.group(5));
+					        final Calendar cal = Calendar.getInstance();
+					        final int year     = cal.get(Calendar.YEAR);
+					        cal.setTime(date);
+					        cal.set(Calendar.YEAR, year);
+					        logDone.date = cal.getTimeInMillis();
+					    }
+					    catch (ParseException ee)
+					    {
+					        Log.w(cgSettings.tag, "Failed to parse logs date: " + ee.toString());
+					    }
 					}
 
 					logDone.author = Html.fromHtml(matcherLog.group(1)).toString();
@@ -2457,12 +2482,12 @@ public class cgBase {
 					continue;
 				}
 				if (trackableMatcher.group(3) != null) {
-					trackable.ctl = new Integer(trackableMatcher.group(3));
+					trackable.ctl = Integer.valueOf(trackableMatcher.group(3));
 				} else {
 					continue;
 				}
 				if (trackableMatcher.group(5) != null) {
-					trackable.id = new Integer(trackableMatcher.group(5));
+					trackable.id = Integer.valueOf(trackableMatcher.group(5));
 				} else {
 					continue;
 				}
@@ -4165,63 +4190,7 @@ public class cgBase {
 			scheme = "https://";
 		}
 
-		// prepare cookies
-		String cookiesDone = null;
-		if (cookies == null || cookies.isEmpty()) {
-			if (cookies == null) {
-				cookies = new HashMap<String, String>();
-			}
-
-			final Map<String, ?> prefsAll = prefs.getAll();
-			final Set<? extends Map.Entry<String, ?>> entrySet = prefsAll.entrySet();
-			
-			for(Map.Entry<String, ?> entry : entrySet){
-				String key = entry.getKey();
-				if (key.matches("cookie_.+")) {
-					final String cookieKey = key.substring(7);
-					final String cookieValue = (String) entry.getValue();
-
-					cookies.put(cookieKey, cookieValue);
-				}
-			}
-		}
-
-		if (cookies != null) {
-			final Set<Map.Entry<String, String>> entrySet = cookies.entrySet();
-			final ArrayList<String> cookiesEncoded = new ArrayList<String>();
-			
-			for(Map.Entry<String, String> entry : entrySet){
-				cookiesEncoded.add(entry.getKey() + "=" + entry.getValue());
-			}
-
-			if (cookiesEncoded.size() > 0) {
-				cookiesDone = implode("; ", cookiesEncoded.toArray());
-			}
-		}
-
-		if (cookiesDone == null) {
-			Map<String, ?> prefsValues = prefs.getAll();
-
-			if (prefsValues != null && prefsValues.size() > 0 && prefsValues.keySet().size() > 0) {
-				final Set<? extends Map.Entry<String, ?>> entrySet = prefsValues.entrySet();
-				final ArrayList<String> cookiesEncoded = new ArrayList<String>();
-
-				for(Map.Entry<String, ?> entry : entrySet){
-					String key = entry.getKey();
-					if (key.length() > 7 && key.substring(0, 7).equals("cookie_")) {
-						cookiesEncoded.add(key + "=" + entry.getValue());						
-					}
-				}
-
-				if (cookiesEncoded.size() > 0) {
-					cookiesDone = implode("; ", cookiesEncoded.toArray());
-				}
-			}
-		}
-
-		if (cookiesDone == null) {
-			cookiesDone = "";
-		}
+		String cookiesDone = getCookiesAsString();
 
 		URLConnection uc = null;
 		HttpURLConnection connection = null;
@@ -4323,16 +4292,7 @@ public class cgBase {
 				}
 				prefsEditor.commit();
 
-				final String encoding = connection.getContentEncoding();
-				InputStream ins;
-
-				if (encoding != null && encoding.equalsIgnoreCase("gzip")) {
-					ins = new GZIPInputStream(connection.getInputStream());
-				} else if (encoding != null && encoding.equalsIgnoreCase("deflate")) {
-					ins = new InflaterInputStream(connection.getInputStream(), new Inflater(true));
-				} else {
-					ins = connection.getInputStream();
-				}
+				InputStream ins = getInputstreamFromConnection(connection);
 				final InputStreamReader inr = new InputStreamReader(ins);
 				final BufferedReader br = new BufferedReader(inr, 16 * 1024);
 
@@ -4401,32 +4361,7 @@ public class cgBase {
 		return response;
 	}
 
-	private static void replaceWhitespace(final StringBuffer buffer) {
-		final int length = buffer.length();
-		final char[] chars = new char[length];
-		buffer.getChars(0, length, chars, 0);
-		int resultSize = 0;
-		boolean lastWasWhitespace = false;
-		for (int i = 0; i < length; i++) {
-			char c = chars[i];
-			if (c == ' ' || c == '\n' || c == '\r' || c == '\t') {
-				if (!lastWasWhitespace) {
-					chars[resultSize++] =' ';
-				}
-				lastWasWhitespace = true;
-			} else {
-				chars[resultSize++] = c;
-				lastWasWhitespace = false;
-			}
-		}
-		buffer.setLength(0);
-		buffer.append(chars);
-	}
-
-	public String requestJSONgc(String host, String path, String params) {
-		int httpCode = -1;
-		String httpLocation = null;
-
+	private String getCookiesAsString() {
 		// prepare cookies
 		String cookiesDone = null;
 		if (cookies == null || cookies.isEmpty()) {
@@ -4484,6 +4419,35 @@ public class cgBase {
 		if (cookiesDone == null) {
 			cookiesDone = "";
 		}
+		return cookiesDone;
+	}
+
+	private static void replaceWhitespace(final StringBuffer buffer) {
+		final int length = buffer.length();
+		final char[] chars = new char[length];
+		buffer.getChars(0, length, chars, 0);
+		int resultSize = 0;
+		boolean lastWasWhitespace = false;
+		for (char c : chars) {
+			if (c == ' ' || c == '\n' || c == '\r' || c == '\t') {
+				if (!lastWasWhitespace) {
+					chars[resultSize++] =' ';
+				}
+				lastWasWhitespace = true;
+			} else {
+				chars[resultSize++] = c;
+				lastWasWhitespace = false;
+			}
+		}
+		buffer.setLength(0);
+		buffer.append(chars);
+	}
+
+	public String requestJSONgc(String host, String path, String params) {
+		int httpCode = -1;
+		String httpLocation = null;
+
+		String cookiesDone = getCookiesAsString();
 
 		URLConnection uc = null;
 		HttpURLConnection connection = null;
@@ -4555,16 +4519,7 @@ public class cgBase {
 				}
 				prefsEditor.commit();
 
-				final String encoding = connection.getContentEncoding();
-				InputStream ins;
-
-				if (encoding != null && encoding.equalsIgnoreCase("gzip")) {
-					ins = new GZIPInputStream(connection.getInputStream());
-				} else if (encoding != null && encoding.equalsIgnoreCase("deflate")) {
-					ins = new InflaterInputStream(connection.getInputStream(), new Inflater(true));
-				} else {
-					ins = connection.getInputStream();
-				}
+				InputStream ins = getInputstreamFromConnection(connection);
 				final InputStreamReader inr = new InputStreamReader(ins);
 				final BufferedReader br = new BufferedReader(inr);
 
@@ -4609,6 +4564,20 @@ public class cgBase {
 		} else {
 			return "";
 		}
+	}
+
+	private static InputStream getInputstreamFromConnection(HttpURLConnection connection) throws IOException {
+		final String encoding = connection.getContentEncoding();
+		InputStream ins;
+
+		if (encoding != null && encoding.equalsIgnoreCase("gzip")) {
+			ins = new GZIPInputStream(connection.getInputStream());
+		} else if (encoding != null && encoding.equalsIgnoreCase("deflate")) {
+			ins = new InflaterInputStream(connection.getInputStream(), new Inflater(true));
+		} else {
+			ins = connection.getInputStream();
+		}
+		return ins;
 	}
 
 	public static String requestJSON(String host, String path, String params) {
@@ -4690,16 +4659,7 @@ public class cgBase {
 					}
 
 
-					final String encoding = connection.getContentEncoding();
-					InputStream ins;
-
-					if (encoding != null && encoding.equalsIgnoreCase("gzip")) {
-						ins = new GZIPInputStream(connection.getInputStream());
-					} else if (encoding != null && encoding.equalsIgnoreCase("deflate")) {
-						ins = new InflaterInputStream(connection.getInputStream(), new Inflater(true));
-					} else {
-						ins = connection.getInputStream();
-					}
+					InputStream ins = getInputstreamFromConnection(connection);
 					final InputStreamReader inr = new InputStreamReader(ins);
 					final BufferedReader br = new BufferedReader(inr, 1024);
 
@@ -4825,11 +4785,11 @@ public class cgBase {
 		if (path.exists()) {
 			File[] files = path.listFiles();
 
-			for (int i = 0; i < files.length; i++) {
-				if (files[i].isDirectory()) {
-					deleteDirectory(files[i]);
+			for (File file : files) {
+				if (file.isDirectory()) {
+					deleteDirectory(file);
 				} else {
-					files[i].delete();
+					file.delete();
 				}
 			}
 		}
